test/files/neg/t5429.check
t5429.scala:20: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  object value      // fail
         ^
t5429.scala:21: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  object lazyvalue  // fail
         ^
t5429.scala:22: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  object nullary    // fail
         ^
t5429.scala:23: error: `override` modifier required to override concrete member:
def emptyArg(): Int (defined in class A)
  object emptyArg   // fail
         ^
t5429.scala:27: error: `override` modifier required to override concrete member:
val value: Any (defined in class A0)
  object value      // fail
         ^
t5429.scala:28: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Any (defined in class A0)
  object lazyvalue  // fail
         ^
t5429.scala:29: error: `override` modifier required to override concrete member:
def nullary: Any (defined in class A0)
  object nullary    // fail
         ^
t5429.scala:30: error: `override` modifier required to override concrete member:
def emptyArg(): Any (defined in class A0)
  object emptyArg   // fail
         ^
t5429.scala:35: error: incompatible type in overriding
val value: Int (defined in class A);
 found   : C.this.value.type
 required: Int
  override object value     // fail
                  ^
t5429.scala:36: error: value must be lazy when overriding concrete lazy value:
lazy val lazyvalue: Int (defined in class A)
  override object lazyvalue // fail
                  ^
t5429.scala:37: error: incompatible type in overriding
def nullary: Int (defined in class A);
 found   : C.this.nullary.type
 required: => Int
  override object nullary   // fail
                  ^
t5429.scala:38: error: incompatible type in overriding
def emptyArg(): Int (defined in class A);
 found   : C.this.emptyArg.type
 required: ()Int
  override object emptyArg  // fail
                  ^
t5429.scala:39: error: object oneArg overrides nothing.
Note: the super classes of class C contain the following, non final members named oneArg:
def oneArg(x: String): Int
  override object oneArg    // fail
                  ^
t5429.scala:43: error: value must be lazy when overriding concrete lazy value:
lazy val lazyvalue: Any (defined in class A0)
  override object lazyvalue // !!! this fails, but should succeed (lazy over lazy)
                  ^
t5429.scala:46: error: object oneArg overrides nothing.
Note: the super classes of class C0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override object oneArg    // fail
                  ^
t5429.scala:50: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  val value = 0       // fail
      ^
t5429.scala:51: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  val lazyvalue = 0   // fail
      ^
t5429.scala:52: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  val nullary = 5     // fail
      ^
t5429.scala:53: error: `override` modifier required to override concrete member:
def emptyArg(): Int (defined in class A)
  val emptyArg = 10   // fail
      ^
t5429.scala:58: error: value must be lazy when overriding concrete lazy value:
lazy val lazyvalue: Any (defined in class A0)
  override val lazyvalue = 0  // fail (non-lazy)
               ^
t5429.scala:61: error: value oneArg overrides nothing.
Note: the super classes of class D0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override val oneArg = 15    // fail
               ^
t5429.scala:65: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  def value = 0       // fail
      ^
t5429.scala:66: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  def lazyvalue = 2   // fail
      ^
t5429.scala:67: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  def nullary = 5     // fail
      ^
t5429.scala:68: error: `override` modifier required to override concrete member:
def emptyArg(): Int (defined in class A)
  def emptyArg = 10   // fail
      ^
t5429.scala:72: error: stable, immutable value required to override:
val value: Any (defined in class A0)
  override def value = 0      // fail
               ^
t5429.scala:73: error: stable, immutable value required to override:
lazy val lazyvalue: Any (defined in class A0)
  override def lazyvalue = 2  // fail
               ^
t5429.scala:76: error: method oneArg overrides nothing.
Note: the super classes of class E0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override def oneArg = 15    // fail
               ^
t5429.scala:80: error: `override` modifier required to override concrete member:
val value: Int (defined in class A)
  lazy val value = 0       // fail
           ^
t5429.scala:81: error: `override` modifier required to override concrete member:
lazy val lazyvalue: Int (defined in class A)
  lazy val lazyvalue = 2   // fail
           ^
t5429.scala:82: error: `override` modifier required to override concrete member:
def nullary: Int (defined in class A)
  lazy val nullary = 5     // fail
           ^
t5429.scala:83: error: `override` modifier required to override concrete member:
def emptyArg(): Int (defined in class A)
  lazy val emptyArg = 10   // fail
           ^
t5429.scala:87: error: concrete non-lazy value cannot be overridden:
val value: Any (defined in class A0)
  override lazy val value = 0      // fail (strict over lazy)
                    ^
t5429.scala:91: error: lazy value oneArg overrides nothing.
Note: the super classes of class F0 contain the following, non final members named oneArg:
def oneArg(x: String): Any
  override lazy val oneArg = 15    // fail
                    ^
34 errors found
